# wrtg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bootstrap.sh  build-rust.sh  install.sh  uninstall.sh
.cursor/: AI_CONTEXT.example.md
.cursor/rules/: docs-sync.mdc  no-zapret.mdc
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
crates/wrtg/: Cargo.toml  MIGRATION.md
crates/wrtg/src/: bridge.rs  cf_balancer.rs  cf_proxy.rs  cf_proxy_cooldown.rs  cf_proxy_doh.rs  cf_proxy_domains.rs  cf_worker_pool.rs  check.rs  config.rs  conn_pool.rs  dc_learn.rs  fronting.rs  handshake.rs  https.rs  ip_fail.rs  lib.rs  logger.rs  main.rs  media.rs  mtproto.rs  splitter.rs  stats.rs  tls.rs  tls_sni.rs  ttl_map.rs  watchdog.rs  ws.rs  ws_blacklist.rs  ws_pool.rs
crates/wrtg/src/sockopt/: linux.rs  mod.rs  stub.rs
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CF_PROXY.md  CF_WORKER_SETUP.md  DEVELOPMENT.md  GUIDE.md
openwrt/: CfProxy.md  CfWorker.md  calls-debug.sh  cf-worker.js  check-cidr-sync.sh  check-update.sh  cidr-extra.txt  config.cfworker.template  config.default  dc-ips.txt  lib.sh  setup-nft.sh  update-cidr.sh  wrtg.init  wrtg.nft  zapret-telegram-calls.sh
openwrt/luci-app-wrtg/: Makefile  install-luci.sh
openwrt/luci-app-wrtg/root/usr/share/luci/menu.d/: luci-app-wrtg.json
openwrt/luci-app-wrtg/root/usr/share/rpcd/acl.d/: luci-app-wrtg.json
openwrt/luci-app-wrtg/root/usr/share/ucode/luci/template/wrtg/: action.ut  config.ut  docs.ut  logs.ut  status.ut
