[package]
name = "wrtg"
version = "0.5.6"
edition = "2021"
description = "Telegram MTProto transparent proxy (Rust port of tg-tproxy)"
license = "MIT"

[[bin]]
name = "wrtg"
path = "src/main.rs"

[dependencies]
aes = "0.8"
base64 = "0.22"
bytes = "1"
ctr = "0.9"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
webpki-roots = "1.0.8"
sha1 = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
hex = "0.4"
